--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 
-/* .custom-card-image .card.image-full:before{
+.custom-card-image .card.image-full:before{
   border-radius: 0.5rem;
   opacity: 0.45;
-} */
+}
